...
                    android:id="@+id/imageView"
                    android:layout_width="100dp"
                    android:layout_height="86dp"
                    app:srcCompat="@drawable/ic_ftouch_retail" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_user_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Mobile No"
                    android:textColorHint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#0000"
                        android:focusable="true"
                        android:inputType="phone"
                        android:maxLength="10"
...
                        android:layout_height="1dp"
                        android:background="#555555" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="PASSWORD"
                    android:textColorHint="@color/black"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black">
...
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#555555" />


                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#0000"
                        android:focusable="true"
                        android:inputType="textPassword"
                        android:padding="14dp"
...
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="8dp"
                    android:paddingBottom="5dp">

                    <CheckBox
                        android:id="@+id/chk_remember"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/lyout_passwd"
                        android:layout_alignLeft="@+id/lyout_passwd"
                        android:text="REMEMBER ME"
                        android:textColor="@color/black"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
...
                        android:textSize="15sp" />

                </LinearLayout>


                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:padding="2dp"
                    android:text="LOGIN"
                    android:background="@color/colorPrimary"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
...
