<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.Toolbar xmlns:local="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolColor"
        android:backgroundTint="@color/toolColor"
        local:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
        local:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
        local:title="Send Sms"
        local:titleTextColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:padding="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/lyout_bottom">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_bulk_sms"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:hint="BULK SMS TITLE"
                        android:inputType="textCapCharacters"
                        android:padding="10dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/txt_group_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_black"
                    android:drawableTint="@color/light_gray"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="GROUP NAME"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ADCCE2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="SMS TYPE"
                    android:textSize="14sp" />

                <RadioGroup
                    android:id="@+id/rg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/rb_transnational"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:textSize="14sp"
                        android:text="TRANSACTIONAL" />

                    <RadioButton
                        android:id="@+id/rb_promotional"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:text="PROMOTIONAL" />

                </RadioGroup>

                <TextView
                    android:id="@+id/txt_sender_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_black"
                    android:drawableTint="@color/light_gray"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="SENDER ID"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ADCCE2" />


                <TextView
                    android:id="@+id/txt_sms_format"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:backgroundTint="@color/colorPrimaryDark"
                    android:drawableEnd="@drawable/ic_arrow_drop_down_black"
                    android:drawableTint="@color/light_gray"
                    android:gravity="center_vertical"
                    android:padding="10dp"
                    android:text="SMS FORMAT"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#ADCCE2" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/shipper_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_marginTop="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_sms_preview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="top"
                        android:hint="MESSAGE PREVIEW"
                        android:inputType="textMultiLine"
                        android:overScrollMode="always"
                        android:padding="10dp"
                        android:scrollbarStyle="insideInset"
                        android:scrollbars="vertical" />
                </com.google.android.material.textfield.TextInputLayout>


            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:id="@+id/lyout_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                style="@style/Widget.MaterialComponents.Button.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Next" />


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>