...
    <!--<string name="app_name">fTouch POS Demo</string>-->

    <string name="terms"> <u>Terms and Conditions</u>.</string>
    <string name="contact_no"> <u>call</u>.</string>
    <string name="title_activity_restaurant__lite">Restaurant_LiteActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="termsofservice">All copyright, trade marks, design rights, patents and other
        intellectual property rights (registered and unregistered)
        Nothing in the Terms grants you a right or license to use any trade mark, design right or
...
